Completed implementation of DataViewer application (including UI). Refactoring

--- a/Accounts/src/main/resources/application.properties
+++ b/Accounts/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 server.port=8082
-create.transaction.service.url=http://localhost:8083/transactions/%s/%s
+create.transaction.service.url=http://localhost:8083/transactions?accountId=%s&amount=%s
